@@ -1,3 +1,9 @@
+2005-10-25 Pierrick LE GALL
+
+	* bug 183 fixed: Warning when trying to associate an image with an
+	already associated category. Just coded the TODO instructions I
+	had let some time ago.
+
 2005-10-23 chrisaga
 
 	* bug 184 fixed: .png button left aligned in IE
